manifests/pihole/pihole-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    labels:
        app: pihole
    name: pihole
    namespace: pihole
spec:
    selector:
        matchLabels:
            app: pihole
    template:
        metadata:
            labels:
                app: pihole
        spec:
            containers:
                - image: pihole/pihole:v5.8.1
                  imagePullPolicy: IfNotPresent
                  name: pihole
                  volumeMounts:
                      - name: pihole-pvc
                        mountPath: "/etc/pihole"
                      - name: dnsmasq-pvc
                        mountPath: "/etc/dnsmasq.d"
            hostAliases:
                - ip: 192.168.100.11
                  hostnames:
                    - k8s1
                    - pi1
                - ip: 192.168.100.12
                  hostnames:
                    - k8s2
                    - pi2
                - ip: 192.168.100.13
                  hostnames:
                    - k8s3
                    - pi3
            restartPolicy: Always
            volumes:
                - name: pihole-pvc
                  persistentVolumeClaim:
                      claimName: pihole-pvc
                - name: dnsmasq-pvc
                  persistentVolumeClaim:
                      claimName: dnsmasq-pvc
