manifests/pihole/pihole-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: pihole-tcp
    namespace: pihole
    annotations:
        metallb.universe.tf/address-pool: production
        metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
    externalTrafficPolicy: Local
    loadBalancerIP: 192.168.100.50
    ports:
        # pihole use Ports to expose (53, 80, 67, 443), the bare minimum ports required for Pi-holes HTTP and DNS services
        - port: 80
          targetPort: 80
          name: port80
          protocol: TCP
        - port: 443
          targetPort: 443
          name: port443
          protocol: TCP
        - port: 53
          targetPort: 53
          protocol: TCP
          name: port53
    selector:
        app: pihole
    type: LoadBalancer
---
apiVersion: v1
kind: Service
metadata:
    name: pihole-udp
    namespace: pihole
    annotations:
        metallb.universe.tf/address-pool: production
        metallb.universe.tf/allow-shared-ip: pihole-svc
spec:
    externalTrafficPolicy: Local
    loadBalancerIP: 192.168.100.50
    ports:
        - port: 53
          targetPort: 53
          protocol: UDP
          name: port53-udp
        - port: 67
          targetPort: 67
          protocol: UDP
          name: port67-udp
    selector:
        app: pihole
    type: LoadBalancer
